--- a/web_app/src/components/MoreInfoMovieCard/style.scss
+++ b/web_app/src/components/MoreInfoMovieCard/style.scss
@@ -1,3 +1,17 @@
+// Copyright 2018 Google LLC
+
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+
+//     https://www.apache.org/licenses/LICENSE-2.0
+
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
 .modal {
   user-select: none;
   -webkit-user-select: none;
@@ -9,8 +23,6 @@
   left: 0;
   top: 0;
   overflow: auto; /* Enable scroll if needed */
-  //background-color: rgb(0, 0, 0); /* Fallback color */
-  //background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
   background-color: rgba(83, 109, 254, 0.9);
   .background-poster {
     opacity: 90%;
