minor tweaks to remove unneccesary code and replace mentions of admin with moderator

--- a/web_app/src/components/ModAddMod/template.html
+++ b/web_app/src/components/ModAddMod/template.html
@@ -1,5 +1,5 @@
   <div id="admin">
-    <toolbar class="foo" :hide="hide"></toolbar>
+    <toolbar :hide="hide"></toolbar>
     <div class="newadmin"> 
       <label class="instructions">Fill out this form to grant permission to another user to add new movies and add new moderators</label>
       <input class="userEmail"  v-model="user_email" placeholder="email">
