--- a/web_app/src/components/MoreInfoMovieCard/style.scss
+++ b/web_app/src/components/MoreInfoMovieCard/style.scss
@@ -170,7 +170,7 @@
   }
 }
 
-/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+/* When the screen is less than 600px wide, stack the links vertically instead of horizontally */
 @media screen and (max-width: 600px) {
   .modal {
     .movie {
