--- a/web_app/src/components/MyMovies/style.scss
+++ b/web_app/src/components/MyMovies/style.scss
@@ -109,7 +109,7 @@ a {
   grid-area: movies;
 }
 
-/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+/* When the screen is less than 600px wide, stack the links vertically instead of horizontally */
 @media screen and (max-width: 600px) {
   .movies {
     float: center;
