--- a/web_app/src/components/ModAddMovie/template.html
+++ b/web_app/src/components/ModAddMovie/template.html
@@ -1,5 +1,5 @@
   <div id="admin">
-    <toolbar class="foo" :hide="hide"></toolbar>
+    <toolbar :hide="hide"></toolbar>
     <div class="reviewbox" :class="{hide: isAddMovie}">
       <input class="movieTitle"  v-model="movie_title" placeholder="Title">
       <input class="imageURL" v-model="image_url" placeholder="Link to Image">
