--- a/web_app/src/components/ModAddMod/template.html
+++ b/web_app/src/components/ModAddMod/template.html
@@ -3,6 +3,6 @@
   <div class="newadmin"> 
     <label class="instructions">Fill out this form to grant permission to another user to add new movies and add new moderators</label>
     <input class="userEmail"  v-model="user_email" placeholder="email">
-    <button class="submitNewUser" @click="onAddAdminUser()">Submit</button>
+    <button class="submitNewUser" @click="onAddModerator()">Submit</button>
   </div>
 </div>
